--- a/examples/freertos_test/platformio.ini
+++ b/examples/freertos_test/platformio.ini
@@ -8,7 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+framework = espidf
+
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
-framework = espidf
+build_flags = -DLED=2
+
