Added  HelTec Board to ini

--- a/examples/freertos_test/platformio.ini
+++ b/examples/freertos_test/platformio.ini
@@ -10,9 +10,12 @@
 
 [env]
 framework = espidf
+platform = espressif32
 
 [env:nodemcu-32s]
-platform = espressif32
 board = nodemcu-32s
 build_flags = -DLED=2
 
+[env:heltec]
+board = heltec_wifi_kit_32
+build_flags = -DLED=25
