--- a/examples/freertos_test/platformio.ini
+++ b/examples/freertos_test/platformio.ini
@@ -8,14 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = freenove
+
 [env]
 framework = espidf
 platform = espressif32
 
 [env:nodemcu-32s]
 board = nodemcu-32s
-build_flags = -DLED=2
+build_flags = 
+    -D LED=2
 
 [env:heltec]
 board = heltec_wifi_kit_32
-build_flags = -DLED=25
+build_flags = 
+    -D LED=25
+
+[env:freenove]
+board = esp32dev
+build_flags = 
+    -D LED=2
