--- a/examples/freertos_test/platformio.ini
+++ b/examples/freertos_test/platformio.ini
@@ -29,5 +29,4 @@ build_flags =
 board = esp-wrover-kit
 build_flags = 
     -D LED=2
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
+monitor_speed = 115200
