--- a/examples/freertos_test/platformio.ini
+++ b/examples/freertos_test/platformio.ini
@@ -14,6 +14,8 @@ default_envs = freenove
 [env]
 framework = espidf
 platform = espressif32
+monitor_speed = 115200
+monitor_filters = direct, esp32_exception_decoder
 
 [env:nodemcu-32s]
 board = nodemcu-32s
@@ -29,4 +31,3 @@ build_flags =
 board = esp-wrover-kit
 build_flags = 
     -D LED=2
-monitor_speed = 115200
